bugfix #161846, make computation of getClassPathFromManifest() more robust; do not add duplicate elements to path list